# work-dash-backend

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  ping.rs  reminders.rs  rss.rs  temperatures.rs  users.rs
www/: index.html
www/css/: main.css
www/js/: main.js
www/js/components/: clocks.vue  dash-header.vue  image.vue  reminders.vue  rss.vue  servers.vue  status.vue  temps.vue
www/js/pages/: dashboard.vue  login.vue
www/login/: index.html
