[package]
name = "work-dash-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix-files = "0.6.2"
sqlx = { version ="0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
thiserror = "1.0.40"
bcrypt = "0.14.0"