[package]
name = "work-dash-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio_schedule = "0.3.0"
actix-web = { version = "4", features = ["openssl"] }
actix-web-httpauth = "0.8.0"
actix-files = "0.6.2"
actix-rt = "2.7.0"
openssl = { version = "0.10", features = ["v110"] }
sqlx = { version ="0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
thiserror = "1.0.40"
bcrypt = "0.14.0"
jwt="0.16"
hmac="0.12"
sha2="0.10"
env_logger = "0.10"
rss = "2.0.3"
reqwest = { version = "0.11.17", features=["json"] }
chrono="0.4.24"
dotenv = "0.15"
dns-lookup = "2.0.1"
surge-ping = "0.8.0"